organization은 어케하는지 모름

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unjemanna",
-  "homepage": "https://setosejin.github.io/unjemanna/",
+  "homepage": "https://Sejin-Kim-Team.github.io/unjemanna/",
   "version": "0.0.1",
   "private": true,
   "type": "module",
